# tetris-cpp

./: .gitignore  CMakeLists.txt
.github/workflows/: cmake-single-platform.yml
include/: board-matrix.h  game.h  random.h  rect.h  rendering.h  shape.h  vec2.h
include/configs/: constants.h  input.h  symbols.h
src/: game.cpp  main.cpp  rendering.cpp
tests/: CMakeLists.txt  test-matrix.cpp  test-rect.cpp  test-vector.cpp
